Hero section and nav bar

--- a/AnimeHubClient/Layout/MainLayout.razor
+++ b/AnimeHubClient/Layout/MainLayout.razor
@@ -49,7 +49,7 @@
         </MudHidden>
     </MudAppBar> *@
     <NavBar></NavBar>
-    <main>
+    <main class="main-content">
         <article class="content px-4">
             @Body
         </article>
