--- a/AnimeHubClient/Pages/Anime/AnimeCatalog.razor
+++ b/AnimeHubClient/Pages/Anime/AnimeCatalog.razor
@@ -37,7 +37,7 @@
     </div>
 
     @* Anime Card Grid and Loading State *@
-    <div class="col-12 mt-5 pt-5">
+    <div class="col-12 mt-5 pt-5 section-card">
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 row-cols-xl-5 g-4 justify-content-start">
             @if (IsLoading && AnimesList.Count == 0)
             {
