Implementing Mudblazor in forms and list

--- a/AnimeHubClient/Layout/MainLayout.razor
+++ b/AnimeHubClient/Layout/MainLayout.razor
@@ -63,7 +63,7 @@
         {
             Primary = "#FF9000",
             Secondary = "#000000",
-            Background = "#F5F5F5",
+            Background = "#FDFDFD",
             Surface = "#FFFFFF",
             TextPrimary = "#000000"
         },
