--- a/AnimeHubClient/Pages/Category/CategoryUpsert.razor
+++ b/AnimeHubClient/Pages/Category/CategoryUpsert.razor
@@ -12,35 +12,31 @@
 }
 else
 {
-    <div class="card shadow border-0 mt-4">
-        <div class="card-header bg-black bg-gradient m-lg-0 py-3">
-            <div class="row">
-                <div class="col-12 text-center">
-                    <h2 class="text-white py-2">@(Id > 0 ? "Update" : "Create") Category</h2>
-                </div>
-            </div>
-        </div>
-        <div class="card-body p-4">
+    <MudCard Elevation="4" Class="mt-4">
+        <MudCardHeader>
+            <CardHeaderContent>
+                <MudText Align="Align.Center" Typo="Typo.h4" Class="fw-bold">@(Id > 0 ? "Update" : "Create") Category</MudText>
+            </CardHeaderContent>
+        </MudCardHeader>
+        <MudCardContent>
             <EditForm Model="Category" FormName="CategoryUpsertForm" OnValidSubmit="UpsertCategory">
-                <DataAnnotationsValidator></DataAnnotationsValidator>
+                <DataAnnotationsValidator />
 
-                <div class="border p-3 mt-4">
-                    <div class="form-floating py-3 col-12">
-                        <InputText @bind-Value="Category.Name" class="form-control" id="Name"></InputText>
-                        <label for="Name">Name</label>
-                        <ValidationMessage For="@(() => Category.Name)"></ValidationMessage>
-                    </div>
-                    <div class="row mt-3">
-                        <div class="col-12 d-flex justify-content-around gap-5">
+                <MudTextField Variant="Variant.Outlined" Label="Category Name" @bind-Value="Category.Name" For="@(() => Category.Name)" Class="mb-4" />
+
+                <MudCardActions>
+                    <MudGrid Justify="Justify.Center" Class="px-2">
+                        <MudItem xs="12" sm="6">
                             <MudButton ButtonType="ButtonType.Submit" StartIcon="@Icons.Material.Filled.LibraryAddCheck" Variant="Variant.Filled" Color="Color.Primary" FullWidth="true" Disabled="@IsLoading">@(Id > 0 ? "Update" : "Create")</MudButton>
-                            <MudSpacer />
+                        </MudItem>
+                        <MudItem xs="12" sm="6">
                             <MudButton Href="category" StartIcon="@Icons.Material.Filled.ArrowCircleLeft" Variant="Variant.Filled" Color="Color.Default" FullWidth="true" Disabled="@IsLoading">Back to List</MudButton>
-                        </div>
-                    </div>
-                </div>
+                        </MudItem>
+                    </MudGrid>
+                </MudCardActions>
             </EditForm>
-        </div>
-    </div>
+        </MudCardContent>
+    </MudCard>
 }
 
 @code {
@@ -52,14 +48,11 @@ else
 
     private bool IsLoading { get; set; } = true;
 
-    protected override async Task OnAfterRenderAsync(bool firstRender)
+    protected override async Task OnInitializedAsync()
     {
-        if (firstRender)
-        {
-            await LoadCategory();
-            IsLoading = false;
-            StateHasChanged();
-        }
+        await LoadCategory();
+        IsLoading = false;
+        StateHasChanged();
     }
 
     private async Task LoadCategory()
@@ -78,18 +71,27 @@ else
     private async Task UpsertCategory()
     {
         IsLoading = true;
-        if (Id == 0)
+
+        try
         {
-            // Create
-            await Http.PostAsJsonAsync("api/Category", new CategoryCreateDto { Name = Category.Name });
-            Snackbar.Add("Category created successfully.", Severity.Success);
+            if (Id == 0)
+            {
+                // Create
+                await Http.PostAsJsonAsync("api/Category", new CategoryCreateDto { Name = Category.Name });
+                Snackbar.Add("Category created successfully.", Severity.Success);
+            }
+            else
+            {
+                // Update
+                await Http.PutAsJsonAsync($"api/category/{Category.Id}", Category);
+                Snackbar.Add("Category updated successfully.", Severity.Success);
+            } 
         }
-        else
+        catch (Exception ex)
         {
-            // Update
-            await Http.PutAsJsonAsync($"api/category/{Category.Id}", Category);
-            Snackbar.Add("Category updated successfully.", Severity.Success);
+            Snackbar.Add("An error occured: {ex.Message}", Severity.Error);
         }
+
         IsLoading = false;
         Navigation.NavigateTo("category");
     }
