--- a/AnimeHubClient/wwwroot/css/app.css
+++ b/AnimeHubClient/wwwroot/css/app.css
@@ -84,6 +84,10 @@ main {
 /*        border-bottom: 2px solid var(--bs-primary);*/
     }
 
+.mud-card {
+    background-color: #fdfdfd;
+}
+
 
 /* ========================================================= */
 /* 5. Custom Link & Navigation Styles */
@@ -104,13 +108,13 @@ main {
     top: 0;
     width: 100%;
     z-index: 1000;
-    background-color: rgba(18, 18, 18, 0.85);
+    background-color: rgba(18, 18, 18, 1);
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.25);
     transition: background-color 0.4s ease, backdrop-filter 0.4s ease;
 }
 
     .navbar.scrolled {
-        background-color: rgba(18, 18, 18, 0.4); /* Slightly transparent */
+        background-color: rgba(18, 18, 18, 0.6); /* Slightly transparent */
         backdrop-filter: blur(10px); /* Nice soft blur */
         box-shadow: 0 2px 10px rgba(0, 0, 0, 0.25);
     }
