--- a/AnimeHubClient/Pages/Category/CategoryUpsert.razor
+++ b/AnimeHubClient/Pages/Category/CategoryUpsert.razor
@@ -89,7 +89,7 @@ else
         }
         catch (Exception ex)
         {
-            Snackbar.Add("An error occured: {ex.Message}", Severity.Error);
+            Snackbar.Add($"An error occured: {ex.Message}", Severity.Error);
         }
 
         IsLoading = false;
